WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139838
Web Inspector: Inspector does not reopen correctly after Inspector Process crashes
https://bugs.webkit.org/show_bug.cgi?id=139838
Summary
Web Inspector: Inspector does not reopen correctly after Inspector Process cr...
Joseph Pecoraro
Reported
2014-12-19 15:34:33 PST
* SUMMARY Inspector does not reopen correctly after Inspector Process crashes. There are two issues: (1) Debug Build hits an ASSERT: (2) Ignoring the ASSERT, the Inspector window opens blank (when forced to show). Closing and reopening the inspector, it then works. * STEPS TO REPRODUCE 1. Open inspector 2. shell> kill -9 <pid-of-inspector-process> 3. Reopen inspector => ASSERT || broken inspector * NOTES ASSERTION FAILED: !WebInspectorProxy::isInspectorPage(*this) Source/WebKit2/UIProcess/WebPageProxy.cpp(717) : bool WebKit::WebPageProxy::maybeInitializeSandboxExtensionHandle(const WebCore::URL &, SandboxExtension::Handle &) 1 0x10457ed00 WTFCrashWithSecurityImplication 2 0x106b46584 WebKit::WebPageProxy::maybeInitializeSandboxExtensionHandle(WebCore::URL const&, WebKit::SandboxExtension::Handle&) 3 0x106b466c2 WebKit::WebPageProxy::loadRequest(WebCore::ResourceRequest const&, API::Object*) 4 0x106a7e530 WebKit::WebInspectorProxy::createInspectorPage(IPC::Attachment, bool, bool) 5 0x106a9319a void IPC::callMemberFunctionImpl ...
Attachments
[PATCH] Proposed Fix
(6.78 KB, patch)
2014-12-19 15:42 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-12-19 15:34:44 PST
<
rdar://problem/19314136
>
Joseph Pecoraro
Comment 2
2014-12-19 15:42:14 PST
Created
attachment 243583
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2014-12-19 15:42:43 PST
Better Radar: <
rdar://problem/19124870
>
WebKit Commit Bot
Comment 4
2014-12-19 16:58:00 PST
Comment on
attachment 243583
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 243583 Committed
r177610
: <
http://trac.webkit.org/changeset/177610
>
WebKit Commit Bot
Comment 5
2014-12-19 16:58:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug